[package]
name = "tokimo-package-jellyfin-api"
version = "0.1.0"
edition = "2024"
description = "Jellyfin-compatible API layer for Tokimo"


[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-json", "with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
